# connect-4

./: .gitignore  AGENTS.md  README.md  benchmark.py  board.py  dqn_model.pth  game.py  main.py  play.py  play_game.py  pyproject.toml  readme.MD  requirements.txt  setup.py  simulate_games.py  simulator.py  train_dqn.py  train_model.py  train_qlearning.py
1-random/: play_game.py  test_model.py  train_model.py
1-random/data/: connect4_dataset.py  simulator.py
1-random/model/: dqn_model.pth  dqn_nn.py  dqn_trainer.py
2-better_training/: play_game.py  simulate_games.py  test_evaluator.py  train_model.py
2-better_training/game_engine/: evaluator.py
2-better_training/model/: dqn01_trainer.py
2-monte_carlo/: play_game.py  simulate_games.py  test_model.py  train_model.py
2-monte_carlo/model/: monte_carlo_agent.py  move_selector.py  value_function.py
2-monte_carlo/model_testing/: dqn_vs_random.py  monte_carlo_vs_random.py
9-better_training/: requirements.txt  test_model.py
agents/: __init__.py  dqn_agent.py  heuristic_agent.py  minimax_agent.py  qlearning_agent.py  random_agent.py
connect4/: __init__.py  board.py  constants.py  game.py  win_checker.py
connect4/cli/: __init__.py  (+1 more)
connect_4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: connect4_dataset.py  simulator.py
game_engine/: board.py  game.py
model/: dqn_nn.py  dqn_trainer.py
models/: dqn_model.pt
tests/: test_dqn_agent.py  test_dqn_training.py  test_game.py  test_minimax_agent.py  test_random_agent.py  test_win_checker.py
training/: __init__.py  train_dqn.py  train_qlearning.py
(+39 files in other folders)
